--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -27,8 +27,8 @@
         "playbackItem": "Playback settings",
         "audioItem": "Audio",
         "qualityItem": "Quality",
-        "sourceItem": "Video sources",
-        "subtitleItem": "Subtitle settings",
+        "sourceItem": "Source",
+        "subtitleItem": "Subtitles",
         "videoSection": "Video settings"
       },
       "sources": {
